old_tests/tests/lean/example_false.lean.expected.out
example_false.lean:3:0: error: failed to add declaration to environment, it contains local constants
