old_tests/tests/lean/example_false.lean
open expr tactic

example : false := by do
n â† mk_fresh_name,
apply (local_const n n binder_info.default (const ``false []))
